tests/error/lessThanInteger-wrong-2nd-argument-list-integer-.uplc
(program 1.0.0[[(builtin lessThanInteger)(con integer 10)](con list(integer) [42, 10, 53])])